--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "main": "backend/server.js",
   "scripts": {
     "start": "node backend/server.js",
-    "server": "nodemon backend/server.js"
+    "server": "nodemon backend/server.js",
+    "client": "npm run dev --prefix frontend",
+    "dev": "concurrently 'npm run server' 'npm run client'"
   },
   "author": "rediet",
   "license": "ISC",
@@ -16,5 +18,8 @@
     "express-async-handler": "^1.2.0",
     "mongoose": "^8.0.0",
     "nodemon": "^3.0.1"
+  },
+  "devDependencies": {
+    "concurrently": "^8.2.2"
   }
 }
