--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
   "author": "rediet",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.0",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "mongoose": "^8.0.0",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "concurrently": "^8.2.2"
