--- a/package.json
+++ b/package.json
@@ -5,23 +5,31 @@
   "type": "module",
   "main": "backend/server.js",
   "scripts": {
-    "start": "node backend/server.js",
     "server": "nodemon backend/server.js",
     "client": "npm run dev --prefix frontend",
-    "dev": "concurrently 'npm run server' 'npm run client'"
+    "dev": "concurrently 'npm run server' 'npm run client'",
+    
+    "install-server": "npm install",
+    "start-server": "node backend/server.js",
+    "install-client": "npm install --prefix frontend",
+    "build-client": "npm run build --prefix frontend",
+    "start-client": "npm run start --prefix frontend"
   },
   "author": "rediet",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.0",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.0",
     "nodemon": "^3.0.1",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "^9.1.3",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "concurrently": "^8.2.2"
